--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -12,7 +12,10 @@
     "start": {
       "name": "start",
       "command": "npm run start",
-      "runAtStart": true
+      "runAtStart": true,
+      "preview": {
+        "port": 4200
+      }
     },
     "build": {
       "name": "build",
